Custom errors in manage site

--- a/src/SFA.Apprenticeships.Web.Manage/403.html
+++ b/src/SFA.Apprenticeships.Web.Manage/403.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page not found - Find an apprenticeship</title>
+    <title>Service is currently down for maintenance - Recruit an apprentice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <!--[if gt IE 8]><!--><link href="//az693499.vo.msecnd.net/prod/css/main.css" rel="stylesheet" /><!--<![endif]-->
@@ -20,11 +20,11 @@
     <script type="text/javascript" src="/Content/_assets/js/vendor/modernizr-custom.js"></script>
 </head>
 <body>
-    <div class="skiplink-container">
+    <!--<div class="skiplink-container">
         <div>
             <a href="#main" class="skiplink">Skip to main content</a>
         </div>
-    </div>
+    </div>-->
     <header role="banner" class="global-header">
         <div class="global-header__wrapper">
             <div class="global-header__logo">
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="global-header__nav">
-                <h2 class="global-header__title beta"><a href="/home">Recruit an apprentice</a></h2>
+                <h2 class="global-header__title beta">Recruit an apprentice</h2>
             </div>
         </div>
     </header>
@@ -42,25 +42,18 @@
         <div class="phase-notice gov-border">
             
         </div>
-        <main role="main" id="main">
-            <h1 class="heading-xlarge">Page not found</h1>
+        <div role="main" id="main">
+            <h1 class="heading-xlarge">Service is currently down for maintenance</h1>
             <div class="text">
-                <p>The page you were looking for couldn't be found. Make sure the URL is correct before you try again. </p>
-                <div class="get-started"><a role="button" href="/home" class="button">Recruit an apprentice</a></div>
+                <p>Sorry, our service is currently unavailable. Please try again later.  </p>                
             </div>
-        </main>
+        </div>
     </div>
 
     <footer class="gov-border" role="contentinfo">
         <div class="footer__wrapper">
             <div class="footer__meta">
                 <ul class="footer__nav" role="navigation">
-                    <li class="small-btm-margin">
-                        <a class="footer__link bold-medium" href="/helpdesk">Contact us</a>
-                        <a class="footer__link bold-medium" href="/feedback">Give feedback</a>
-                    </li>
-                    <li class="footer__link"><a href="/privacy">Privacy and cookies</a></li>
-                    <li class="footer__link"><a href="/terms">Terms and conditions</a></li>
                     <li class="footer__link">Built by the <a href="http://gov.uk/sfa" target="_blank">Skills Funding Agency</a></li>
                     <li class="footer__ogl"><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2" class="ir ogl-logo">OGL</a>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</li>
                 </ul>
