--- a/src/SFA.Apprenticeships.Web.Recruit/403.html
+++ b/src/SFA.Apprenticeships.Web.Recruit/403.html
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="global-header__nav">
-                <h2 class="global-header__title beta">Recruit an Apprentice</h2>
+                <h2 class="global-header__title beta">Recruit an apprentice</h2>
             </div>
         </div>
     </header>
