--- a/src/SFA.Apprenticeships.Web.Manage/404.html
+++ b/src/SFA.Apprenticeships.Web.Manage/404.html
@@ -34,7 +34,7 @@
                 </a>
             </div>
             <div class="global-header__nav">
-                <h2 class="global-header__title beta"><a href="/home">Recruit an apprentice</a></h2>
+                <h2 class="global-header__title beta"><a href="/">Recruit an apprentice</a></h2>
             </div>
         </div>
     </header>
@@ -46,7 +46,7 @@
             <h1 class="heading-xlarge">Page not found</h1>
             <div class="text">
                 <p>The page you were looking for couldn't be found. Make sure the URL is correct before you try again. </p>
-                <div class="get-started"><a role="button" href="/home" class="button">Recruit an apprentice</a></div>
+                <div class="get-started"><a role="button" href="/" class="button">Recruit an apprentice</a></div>
             </div>
         </main>
     </div>
