--- a/src/SFA.Apprenticeships.Web.Manage/500.html
+++ b/src/SFA.Apprenticeships.Web.Manage/500.html
@@ -34,7 +34,7 @@
                     </a>
                 </div>
                 <div class="global-header__nav">
-                    <h2 class="global-header__title beta"><a href="/home">Recruit an apprentice</a></h2>
+                    <h2 class="global-header__title beta"><a href="/">Recruit an apprentice</a></h2>
                 </div>
             </div>
         </header>
