--- a/src/SFA.Apprenticeships.Web.Recruit/404.html
+++ b/src/SFA.Apprenticeships.Web.Recruit/404.html
@@ -54,7 +54,7 @@
     <footer class="gov-border" role="contentinfo">
         <div class="footer__wrapper">
             <div class="footer__meta">
-                <ul class="footer__nav" role="navigation">
+                <ul class="footer__nav">
                     <li class="small-btm-margin">
                         <a class="footer__link bold-medium" href="/helpdesk">Contact us</a>
                         <a class="footer__link bold-medium" href="/feedback">Give feedback</a>
