--- a/src/SFA.Apprenticeships.Web.Recruit/VacancyNotFound.html
+++ b/src/SFA.Apprenticeships.Web.Recruit/VacancyNotFound.html
@@ -54,7 +54,7 @@
     <footer class="gov-border" role="contentinfo">
         <div class="footer__wrapper">
             <div class="footer__meta">
-                <ul class="footer__nav" role="navigation">
+                <ul class="footer__nav">
                     <li class="footer__link"><a href="/helpdesk">Helpdesk</a></li>
                     <li class="footer__link"><a href="/privacy">Privacy and cookies</a></li>
                     <li class="footer__link"><a href="/terms">Terms and conditions</a></li>
