--- a/src/SFA.Apprenticeships.Web.Recruit/404.html
+++ b/src/SFA.Apprenticeships.Web.Recruit/404.html
@@ -22,7 +22,7 @@
 <body>
     <div class="skiplink-container">
         <div>
-            <a href="#main" class="skiplink">Skip to main content</a>
+            <a href="#main" class="skiplink" tabindex="-1">Skip to main content</a>
         </div>
     </div>
     <header role="banner" class="global-header">
