--- a/static/avms-helppage/index.html
+++ b/static/avms-helppage/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <link href="/offline.css" media="all" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link href="/content/offline.css" media="all" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" href="/content/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div class="skiplink-container">
@@ -20,7 +20,7 @@
     <div class="global-header__wrapper">
       <div class="global-header__logo">
         <a href="http://gov.uk" title="Go to the GOV.UK homepage" class="govuk-logo">
-          <img src="/gov.uk_logotype_crown.png" alt="Crown">GOV.UK
+          <img src="/content/gov.uk_logotype_crown.png" alt="Crown">GOV.UK
         </a>
       </div>
     </div>
@@ -62,7 +62,7 @@
           <li class="footer__ogl"><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2" class="ir ogl-logo">OGL</a>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</li>
         </ul>
         <a class="footer__copyright" href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm" target="_blank">
-          <img src="/govuk-crest-2x.png" width="125" height="102" alt="Crown copyright logo">
+          <img src="/content/govuk-crest-2x.png" width="125" height="102" alt="Crown copyright logo">
           <p>&copy; Crown copyright</p>
         </a>
       </div>
@@ -70,7 +70,3 @@
   </footer>
 </body>
 </html>
-
-
-
-
