--- a/static/avms-helppage/index.html
+++ b/static/avms-helppage/index.html
@@ -1,72 +1,73 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-GB">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Recruit an apprenticeship - Service unavailable</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-  <link href="/content/offline.css" media="all" rel="stylesheet" type="text/css">
-  <link rel="shortcut icon" href="/content/favicon.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Apprenticeship vacancies (Av)</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <link href="/content/offline.css" media="all" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="/content/favicon.ico" type="image/x-icon">
 </head>
 <body>
-  <div class="skiplink-container">
-    <div>
-      <a href="#main" class="skiplink">Skip to main content</a>
+    <div class="skiplink-container">
+        <div>
+            <a href="#main" class="skiplink">Skip to main content</a>
+        </div>
     </div>
-  </div>
-  <header role="banner" class="global-header">
-    <div class="global-header__wrapper">
-      <div class="global-header__logo">
-        <a href="http://gov.uk" title="Go to the GOV.UK homepage" class="govuk-logo">
-          <img src="/content/gov.uk_logotype_crown.png" alt="Crown">GOV.UK
-        </a>
-      </div>
+    <header role="banner" class="global-header">
+        <div class="global-header__wrapper">
+            <div class="global-header__logo">
+                <a href="http://gov.uk" title="Go to the GOV.UK homepage" class="govuk-logo">
+                    <img src="/content/gov.uk_logotype_crown.png" alt="Crown">GOV.UK
+                </a>
+            </div>
+        </div>
+    </header>
+    <div class="content-container">
+        <div class="phase-notice gov-border">
+            <!--<div class="prototype-warning">-->
+            <span>Apprenticeship vacancies (Av)</span>
+            <!---</div>-->
+        </div>
+        <main role="main" id="main">
+            <h1 class="heading-xlarge">Service announcement</h1>
+
+            <section class="text">
+                <p>Apprenticeship vacancies (Av) has been replaced by new services on GOV.UK:</p>
+                <ul>
+                    <li><a href="https://www.gov.uk/recruit-apprentice">Recruit an apprentice</a> – for training providers (including employers with direct grant funding) to post vacancies and manage applications for apprenticeships and traineeships. The service also has a range of <a href="https://www.gov.uk/government/publications/apprenticeship-vacancies-rss-feeds/rss-feeds-for-apprenticeships">RSS feeds</a> that show apprenticeships vacancies currently available</li>
+
+                    <li><a href="https://www.gov.uk/apply-apprenticeship">Find an apprenticeship</a> – for candidates looking to search and apply for apprenticeships. Other interested parties can use this service to browse vacancies </li>
+
+                    <li><a href="https://www.gov.uk/find-traineeship">Find a traineeship</a> – for candidates looking to search and apply for traineeships</li>
+                </ul>
+                <h3>API changes</h3>
+                <p>All APIs associated with Av have moved over to recruit an apprentice. Please refer to the updated <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/539189/Recruit_an_apprentice_Service_Interface_Version_5.1_guide.pdf">API user guide</a> for detailed information about our API.</p>
+                <p>The <a href="https://www.gov.uk/government/publications/av-live-how-to-set-up-and-use">Av live</a> vacancies tool is unaffected by these API changes</p>
+
+                <h3>Help</h3>
+                <p>You can contact the National Apprenticeships Service for advice or help using the new services. </p>
+                <strong>National Apprenticeship Service</strong>
+                <p>Telephone: 0800 015 0600 <a href="https://www.gov.uk/call-charges">Find out about call charges</a></p>
+
+            </section>
+        </main>
     </div>
-  </header>
-  <div class="content-container">
-    <div class="phase-notice gov-border">
-      <div class="prototype-warning">
-        <strong class="beta__label">Beta</strong> <span>Recruit an apprenticeship service</span>
-      </div>
-    </div>
-    <main role="main" id="main">
-
-<h1 class="heading-xlarge">Service announcement:</h1>
-
-<section class="text">
-  <p>The Apprenticeship Vacancy Matching Service has been decommisioned. The following services are available.</p>
-
-  <p>Find an Apprenticeship</p>
-
-  <p>Recruit an Apprentice</p>
-
-  <p>API Service</p>
-
-  <p>RSS Feed</p>
-
-  <p>Phone: 0800 015 0400</p>
-
-  <p>Email: <a href="mailto:nationalhelpdesk@findapprenticeship.service.gov.uk">nationalhelpdesk@findapprenticeship.service.gov.uk</a>
-  </p>
-
-</section>
-    </main>
-  </div>
-  <footer class="gov-border" role="contentinfo">
-    <div class="footer__wrapper">
-      <div class="footer__meta">
-        <ul class="footer__nav" role="navigation">
-          <li class="footer__link">Built by <a href="http://gov.uk/sfa" target="_blank">Skills Funding Agency</a></li>
-          <li class="footer__ogl"><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2" class="ir ogl-logo">OGL</a>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</li>
-        </ul>
-        <a class="footer__copyright" href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm" target="_blank">
-          <img src="/content/govuk-crest-2x.png" width="125" height="102" alt="Crown copyright logo">
-          <p>&copy; Crown copyright</p>
-        </a>
-      </div>
-    </div>
-  </footer>
+    <footer class="gov-border" role="contentinfo">
+        <div class="footer__wrapper">
+            <div class="footer__meta">
+                <ul class="footer__nav" role="navigation">
+                    <li class="footer__link">Built by <a href="http://gov.uk/sfa" target="_blank">Skills Funding Agency</a></li>
+                    <li class="footer__ogl"><a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2" class="ir ogl-logo">OGL</a>All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/2">Open Government Licence v2.0</a>, except where otherwise stated</li>
+                </ul>
+                <a class="footer__copyright" href="http://www.nationalarchives.gov.uk/information-management/our-services/crown-copyright.htm" target="_blank">
+                    <img src="/content/govuk-crest-2x.png" width="125" height="102" alt="Crown copyright logo">
+                    <p>&copy; Crown copyright</p>
+                </a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
