Updated FAA offline page

--- a/static/findapprenticeship-offline/index.html
+++ b/static/findapprenticeship-offline/index.html
@@ -33,18 +33,18 @@
     </div>
     <main role="main" id="main">
 
-<h1 class="heading-xlarge">Sorry, the Find an apprenticeship service is currently unavailable</h1>
+<h1 class="heading-xlarge">Service unavailable:</h1>
 
 <section class="text">
-  <p>Sorry, Find an apprentice is unavailable at the moment because we're making changes to the service</p>
+  <p>Sorry, Find an apprenticeship is unavailable at the moment because we're making changes to the service</p>
 </section>
 
 <section class="text">
   <h2 class='heading-medium'>If you need to contact us</h2>
 
-  <p>Our helpdesk is open between 9am and 5pm, Monday to Friday.</p>
+  <p>Our helpdesk is open between 8am and 10pm, 7 days a week.</p>
 
-  <p>Phone: 0800 015 0400 or 02476 826482</p>
+  <p>Phone: 0800 015 0400</p>
 
   <p>
   Alternatively, email us and we'll get back to you as soon as possible,
