--- a/static/findapprenticeship-offline/index.html
+++ b/static/findapprenticeship-offline/index.html
@@ -36,7 +36,7 @@
 <h1 class="heading-xlarge">Service unavailable:</h1>
 
 <section class="text">
-  <p>Sorry, Find an apprenticeship is unavailable at the moment because we're making changes to the service</p>
+  <p>Sorry, Find an apprenticeship is unavailable at the moment because we're making changes to the service.</p>
 </section>
 
 <section class="text">
